--- a/docker-compose.ollama.yml
+++ b/docker-compose.ollama.yml
@@ -30,12 +30,14 @@ services:
       ollama:
         condition: service_started
     environment:
-      - MQTT_BROKER=mosquitto
-      - MQTT_PORT=1883
       - DATABASE_URL=postgresql://frankenstein:frankenstein@frankenstein-db:5432/scraper
-      - OLLAMA_HOST=http://ollama:11434
+      - OLLAMA_HOST=http://ollama-proxy:80
+      - OLLAMA_USERNAME=ollama
+      - OLLAMA_PASSWORD=scraper
       - SMALL_MODEL=llama3.1:8b
       - LARGE_MODEL=llama3.1:70b
+      - MQTT_BROKER=mosquitto
+      - MQTT_PORT=1883
     volumes:
       - scraper_data:/app/data
       - scraper_logs:/app/logs
@@ -66,13 +68,34 @@ services:
     networks:
       - ai-scraper-network
 
-  # Ollama - Local LLM service with GPU acceleration
+  # Ollama API Proxy - Secure access with authentication
+  ollama-proxy:
+    image: nginx:alpine
+    container_name: ollama-proxy
+    restart: unless-stopped
+    ports:
+      - "11435:80"  # External access through proxy with auth
+    volumes:
+      - ./nginx/ollama-proxy.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd:ro
+    depends_on:
+      - ollama
+    networks:
+      - ai-scraper-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  # Ollama - Local LLM service with GPU acceleration (Internal Only)
   ollama:
     image: ollama/ollama:latest
     container_name: ollama
     restart: unless-stopped
-    ports:
-      - "11434:11434"
+    # No external ports - internal network only
+    expose:
+      - "11434"
     volumes:
       - ollama_data:/root/.ollama
     environment:
@@ -80,6 +103,7 @@ services:
       - OLLAMA_MAX_LOADED_MODELS=2  # Allow both small and large models
       - OLLAMA_MAX_QUEUE=512  # Handle multiple concurrent requests
       - OLLAMA_RUNNERS_DIR=/tmp/runners
+      - OLLAMA_HOST=0.0.0.0:11434  # Listen on all internal interfaces
     networks:
       - ai-scraper-network
     healthcheck:
